# scopicflow

./: .qmlformat.ini  CMakeLists.txt  README.md
src/: CMakeLists.txt  ScopicFlowGlobal.h
src/assets/: assets.qrc
src/component/: CMakeLists.txt  Clavier.qml  ClipPane.qml  LabelSequence.qml  PianoRoll.qml  PianoRollNoteArea.qml  Timeline.qml  TrackList.qml
src/component/qml/: Clavier.qml  ClipPane.qml  LabelSequence.qml  Mixer.qml  PianoRoll.qml  PianoRollNoteArea.qml  Timeline.qml  TrackList.qml
src/core/: CMakeLists.txt  Palette.cpp  Palette.h  Palette_p.h  ScopicFlowCoreGlobal.h  ScopicFlowNamespace.cpp  ScopicFlowNamespace.h
src/core/controllernotifier/: InteractionControllerNotifier.cpp  InteractionControllerNotifier.h  TransactionControllerNotifier.cpp  TransactionControllerNotifier.h
src/core/internal/: SelectableViewModelManipulatorInterface.cpp  SelectableViewModelManipulatorInterface_p.h  SliceableViewModelQmlHandle_p.h
src/core/util/: ClavierManipulator.cpp  ClavierManipulator.h  ClavierManipulator_p.h  TimeManipulator.cpp  TimeManipulator.h  TimeManipulator_p.h
src/core/viewmodel/: AnimationViewModel.cpp  AnimationViewModel.h  ClavierViewModel.cpp  ClavierViewModel.h  ClipPaneBehaviorViewModel.cpp  ClipPaneBehaviorViewModel.h  LabelSequenceBehaviorViewModel.cpp  LabelSequenceBehaviorViewModel.h  ParameterRangeViewModel.cpp  ParameterRangeViewModel.h  PianoRollNoteAreaBehaviorViewModel.cpp  PianoRollNoteAreaBehaviorViewModel.h  PlaybackViewModel.cpp  PlaybackViewModel.h  ScrollBehaviorViewModel.cpp  ScrollBehaviorViewModel.h  TimeLayoutViewModel.cpp  TimeLayoutViewModel.h  TimeViewModel.cpp  TimeViewModel.h  TrackListLayoutViewModel.cpp  TrackListLayoutViewModel.h
src/internal/: AnchoredCurveQuickItem.cpp  AnchoredCurveQuickItem_p.h  AnchoredCurveQuickItem_p_p.h  CMakeLists.txt  ClavierHelper.cpp  ClavierHelper_p.h  ClavierQuickItem_p.h  ClavierQuickItem_p_p.h  CreatableViewModels_p.h  FluentSystemIconCharset.cpp  FluentSystemIconCharset_p.h  LabelSequenceQuickItem.cpp  LabelSequenceQuickItem_p.h  LabelSequenceQuickItem_p_p.h  PianoRollBackgroundQuickItem.cpp  PianoRollBackgroundQuickItem_p.h  PianoRollBackgroundQuickItem_p_p.h  PianoRollNoteAreaRubberBandHelper.cpp  PianoRollNoteAreaRubberBandHelper_p.h  PianoRollNoteAreaRubberBandHelper_p_p.h  PianoRollScaleQuickItem.cpp  PianoRollScaleQuickItem_p.h  PianoRollScaleQuickItem_p_p.h  RubberBandLayerQuickItem.cpp  RubberBandLayerQuickItem_p.h  RubberBandLayerQuickItem_p_p.h  ScopedIntermediate_p.h  ScopicFlowForeign_p.h  SelectableViewModelManipulator.cpp  SelectableViewModelManipulator_p.h  SequenceSlicerLoader.cpp  SequenceSlicerLoader_p.h  SequenceSlicerLoader_p_p.h  TimeItemModel.cpp  TimeItemModel_p.h  TimelineQuickItem_p.h  TimelineQuickItem_p_p.h  TimelineScaleQuickItem.cpp  TimelineScaleQuickItem_p.h  TimelineScaleQuickItem_p_p.h  (+3 more)
src/internal/qml/: AnchorEditor.qml  AnchorEditorPointerMouseArea.qml  Clavier.qml  ClavierLocator.qml  ClavierManipulator.qml  ClipPane.qml  DragScroller.qml  FluentSystemIcon.qml  FluentSystemIconCharset.mjs  GenericBackPenMouseArea.qml  GenericBackPointerMouseArea.qml  GenericEdgeMouseArea.qml  GenericEraserMouseArea.qml  GenericPointerMouseArea.qml  GenericScissorMouseArea.qml  ItemPopupEdit.qml  LabelSequence.qml  LabelSequenceDelegate.qml  LevelMeter.qml  MiddleButtonMoveHandler.qml  Mixer.qml  MixerDelegate.qml  NoteThumbnail.qml  PianoRoll.qml  PianoRollNoteArea.qml  PositionIndicators.qml  RubberBandRectangle.qml  SequenceSlicer.qml  StandardScrollHandler.qml  StyledScrollBar.qml  TimeAlignmentPositionLocator.qml  TimeManipulator.qml  Timeline.qml  TrackList.qml  TrackListButton.qml  TrackListDelegate.qml  TrackListDial.qml  (+5 more)
src/palette/: CMakeLists.txt  Clavier.qml  LabelSequence.qml  Palette.qml  PianoRoll.qml  Timeline.qml  TrackList.qml  palette.qrc  qmldir
src/quickitem/: Clavier.qml  ClavierQuickItem.cpp  ClavierQuickItem_p.h  ClavierQuickItem_p_p.h  LabelSequence.qml  LabelSequenceQuickItem.cpp  LabelSequenceQuickItem_p.h  LabelSequenceQuickItem_p_p.h  LevelMeter.qml  PianoRoll.qml  PianoRollBackgroundQuickItem.cpp  PianoRollBackgroundQuickItem_p.h  PianoRollBackgroundQuickItem_p_p.h  PianoRollQuickItem.cpp  PianoRollQuickItem_p.h  PianoRollQuickItem_p_p.h  Timeline.cpp  Timeline.h  Timeline.qml  TimelineQuickItem.cpp  TimelineQuickItem_p.h  TimelineQuickItem_p_p.h  Timeline_p.h  TrackList.qml  TrackListDelegate.qml  TrackListQuickItem.cpp  TrackListQuickItem_p.h  TrackListQuickItem_p_p.h  quickitem.qrc
src/scopicflow/: Clavier.qml  LabelSequence.qml  PianoRoll.qml  Timeline.qml  TrackList.qml  qmldir  scopicflow.qrc
src/style/: CMakeLists.txt  Palette.cpp  Palette.h  Palette.qml  Palette_p.h  PianoRoll.qml  TrackList.qml
src/viewmodel/: AnimationViewModel.cpp  AnimationViewModel.h  CMakeLists.txt  ClavierViewModel.cpp  ClavierViewModel.h  ClipPaneBehaviorViewModel.cpp  ClipPaneBehaviorViewModel.h  InteractionControllerNotifier.cpp  InteractionControllerNotifier.h  LabelSequenceBehaviorViewModel.cpp  LabelSequenceBehaviorViewModel.h  LabelSequenceLayoutViewModel.cpp  LabelSequenceLayoutViewModel.h  PaletteViewModel.cpp  PaletteViewModel.h  ParameterRangeViewModel.h  PianoRollNoteAreaBehaviorViewModel.cpp  PianoRollNoteAreaBehaviorViewModel.h  PlaybackViewModel.cpp  PlaybackViewModel.h  ScopicFlowGlobal.h  ScopicFlowNamespace.h  ScrollBehaviorViewModel.cpp  ScrollBehaviorViewModel.h  SelectableViewModelManipulatorInterface_p.h  TimeAlignmentViewModel.cpp  TimeAlignmentViewModel.h  TimeLayoutViewModel.cpp  TimeLayoutViewModel.h  TimeViewModel.cpp  TimeViewModel.h  TrackListLayoutViewModel.cpp  TrackListLayoutViewModel.h  ViewModelHelper_p.h  WheelModifierViewModel.cpp  WheelModifierViewModel.h
src/views/: CMakeLists.txt
src/widget/: ClavierWidget.cpp  ClavierWidget.h  LabelSequenceWidget.cpp  LabelSequenceWidget.h  PianoRollWidget.cpp  PianoRollWidget.h  QuickWrapperHelper.cpp  QuickWrapperHelper_p.h  TimelineWidget.cpp  TimelineWidget.h  TrackListWidget.cpp  TrackListWidget.h
tests/SequenceSlicer/: CMakeLists.txt  main.cpp  main.qml
(+151 files in other folders)
